# lan-ick

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
experiments/: ideas.md  log.md  run.py
src/: cache.py  classifier.py  data.py  model.py  pipeline.py
ui/: server.py
ui/static/: index.html
